tests/e2e/fail/v36_fail_shift_literal.ep
# EXIT: 1
# STDOUT: panic line 4: invalid shift count
fun main(): void {
    let value = u8(1) << 8
    exit(i64(value))
}
